--- a/NWT_Lernhilfe.html
+++ b/NWT_Lernhilfe.html
@@ -32,6 +32,8 @@
   belege den Profilkurs NaturWissenschaften & Technik und m&ouml;chte euch gerne auf dieser Seite einiges erkl&auml;ren, <br/>
   was man f&uuml;r die Themeneinheit "Orientierung im Gel&auml;nde" in der achten Klasse braucht.<br/>
 
+
+
   <p>
 
    <figure>
@@ -45,6 +47,24 @@ Der Sextant, eines der &auml;ltesten<br/>
   </p>
 
 </span>
+
+<span style="font-family:'Candara',Times,serif; font-size: 100%">
+<a style="color: red" href="http://jonathanmerdes.github.io/Deutsch_Lernhilfe.html">Meine Deutsch Lernhilfe</a>
+</span>
+
+<span style="font-family:'Candara',Times,serif; font-size: 100%">
+<a style="color: red" href="http://jonathanmerdes.github.io/Englisch_Lernhilfe.html">Meine Englisch Lernhilfe</a>
+</span>
+
+<span style="font-family:'Candara',Times,serif; font-size: 100%">
+<a style="color: red" href="http://jonathanmerdes.github.io/Latein_Lernhilfe.html">Meine Latein Lernhilfe</a>
+</span>
+
+<span style="font-family:'Candara',Times,serif; font-size: 100%">
+<a style="color: red" href="http://jonathanmerdes.github.io/Mathe_Lernhilfe.html">Meine Mathe Lernhilfe</a>
+</span>
+
+
 <span style="font-family:'Candara',Times,serif; font-size: 100%">
 
 <a style="color: red" href="https://www.youtube.com/user/jonremfcb">Mein Youtube-Kanal</a>
