--- a/Deutsch_Lernhilfe.html
+++ b/Deutsch_Lernhilfe.html
@@ -23,6 +23,7 @@
 <p>
 <span style="font-family:'Comic Sans MS',Times,serif;color:dark grey; font-size: 100%">
 Hallo, ich bin Jonathan M. vom <a style="color: blue" href="http://www.kfg-heidelberg.de">Kurf&uuml;rst-Friedrich-Gymnasium</a>  aus Heidelberg, bin in der 9. Klasse,<br/>
+und will euch auf dieser Seite einiges der deutsche Sprache erklären.
 </p>
 
 </body>
