--- a/NWT_Lernhilfe.html
+++ b/NWT_Lernhilfe.html
@@ -48,26 +48,26 @@ Der Sextant, eines der &auml;ltesten<br/>
 
 </span>
 
-<span style="font-family:'Candara',Times,serif; font-size: 100%">
+<div style="font-family:'Candara',Times,serif; font-size: 100%">
 <a style="color: red" href="http://jonathanmerdes.github.io/Deutsch_Lernhilfe.html">Meine Deutsch Lernhilfe</a>
-</span>
+</div>
 
-<span style="font-family:'Candara',Times,serif; font-size: 100%">
+<div style="font-family:'Candara',Times,serif; font-size: 100%">
 <a style="color: red" href="http://jonathanmerdes.github.io/Englisch_Lernhilfe.html">Meine Englisch Lernhilfe</a>
-</span>
+</div>
 
-<span style="font-family:'Candara',Times,serif; font-size: 100%">
+<div style="font-family:'Candara',Times,serif; font-size: 100%">
 <a style="color: red" href="http://jonathanmerdes.github.io/Latein_Lernhilfe.html">Meine Latein Lernhilfe</a>
-</span>
+</div>
 
-<span style="font-family:'Candara',Times,serif; font-size: 100%">
+<div style="font-family:'Candara',Times,serif; font-size: 100%">
 <a style="color: red" href="http://jonathanmerdes.github.io/Mathe_Lernhilfe.html">Meine Mathe Lernhilfe</a>
-</span>
+</div>
 
 
-<span style="font-family:'Candara',Times,serif; font-size: 100%">
+<div style="font-family:'Candara',Times,serif; font-size: 100%">
 
 <a style="color: red" href="https://www.youtube.com/user/jonremfcb">Mein Youtube-Kanal</a>
-</span>
+</div>
 </body>
 </html>
