--- a/NWT_Lernhilfe.html
+++ b/NWT_Lernhilfe.html
@@ -37,7 +37,7 @@
   <p>
 
    <figure>
-     <img width="250" src="Sextant.png" alt="Der Sextant"/>
+     <img width="250" src="sextant.png" alt="Der Sextant"/>
      <figcaption>
 Der Sextant, eines der &auml;ltesten<br/>
       Positionsbestimmungsger&auml;te
