--- a/NWT_Lernhilfe.html
+++ b/NWT_Lernhilfe.html
@@ -24,7 +24,7 @@
 
     <figure>
       <img class="imgzentirert" width= "500" src="https://upload.wikimedia.org/wikipedia/commons/7/7c/Neckarstaden_HD_KFG.JPG"></img>
-      <figcaption>Meine Schule, das <a href="http://www.kfg-heidelberg.de" style="color: blue">KFG</a> in Heidelberg</figcaption>
+      <figcaption>Meine Schule, das <a href="http://www.kfg-heidelberg.de" style="color: blue">KFG</a> in Heidelberg (von <a href="https://commons.wikimedia.org/wiki/File:Neckarstaden_HD_KFG.JPG" style="color: blue">Wikipedia</a>)</figcaption>
     </figure>
 
   <p><span style="font-family:'Comic Sans MS',Times,serif;color:dark grey; font-size: 100%">
