--- a/Englisch_Lernhilfe.html
+++ b/Englisch_Lernhilfe.html
@@ -26,5 +26,27 @@
   <figcaption>Der Union Jack</figcaption>
 </figure>
 
+<div style="font-family:'Candara',Times,serif; font-size: 100%">
+<a style="color: blue" href="http://jonathanmerdes.github.io/Deutsch_Lernhilfe.html">Meine Deutsch Lernhilfe</a>
+</div>
+
+<div style="font-family:'Candara',Times,serif; font-size: 100%">
+<a style="color: blue" href="http://jonathanmerdes.github.io/Englisch_Lernhilfe.html">Meine Englisch Lernhilfe</a>
+</div>
+
+<div style="font-family:'Candara',Times,serif; font-size: 100%">
+<a style="color: blue" href="http://jonathanmerdes.github.io/Latein_Lernhilfe.html">Meine Latein Lernhilfe</a>
+</div>
+
+<div style="font-family:'Candara',Times,serif; font-size: 100%">
+<a style="color: blue" href="http://jonathanmerdes.github.io/Mathe_Lernhilfe.html">Meine Mathe Lernhilfe</a>
+</div>
+<br>
+<br>
+<div style="font-family:'Candara',Times,serif; font-size: 100%">
+<a style="color: red" href="https://www.youtube.com/user/jonremfcb">Mein Youtube-Kanal</a>
+</div>
+
+
 
 </body>
