--- a/Deutsch_Lernhilfe.html
+++ b/Deutsch_Lernhilfe.html
@@ -26,4 +26,27 @@ Hallo, ich bin Jonathan M. vom <a style="color: blue" href="http://www.kfg-heide
 und will euch auf dieser Seite einiges der deutsche Sprache erklären.
 </p>
 
+<div style="font-family:'Candara',Times,serif; font-size: 100%">
+<a style="color: blue" href="http://jonathanmerdes.github.io/NWT_Lernhilfe.html">Meine NWT Lernhilfe</a>
+</div>
+
+<div style="font-family:'Candara',Times,serif; font-size: 100%">
+<a style="color: blue" href="http://jonathanmerdes.github.io/Englisch_Lernhilfe.html">Meine Englisch Lernhilfe</a>
+</div>
+
+<div style="font-family:'Candara',Times,serif; font-size: 100%">
+<a style="color: blue" href="http://jonathanmerdes.github.io/Latein_Lernhilfe.html">Meine Latein Lernhilfe</a>
+</div>
+
+<div style="font-family:'Candara',Times,serif; font-size: 100%">
+<a style="color: blue" href="http://jonathanmerdes.github.io/Mathe_Lernhilfe.html">Meine Mathe Lernhilfe</a>
+</div>
+<br>
+<br>
+<div style="font-family:'Candara',Times,serif; font-size: 100%">
+<a style="color: red" href="https://www.youtube.com/user/jonremfcb">Mein Youtube-Kanal</a>
+</div>
+
+
 </body>
+</html>
