--- a/Englisch_Lernhilfe.html
+++ b/Englisch_Lernhilfe.html
@@ -31,7 +31,7 @@
 </div>
 
 <div style="font-family:'Candara',Times,serif; font-size: 100%">
-<a style="color: blue" href="http://jonathanmerdes.github.io/Englisch_Lernhilfe.html">Meine Englisch Lernhilfe</a>
+<a style="color: blue" href="http://jonathanmerdes.github.io/NWT_Lernhilfe.html">Meine NWT Lernhilfe</a>
 </div>
 
 <div style="font-family:'Candara',Times,serif; font-size: 100%">
