--- a/Latein_Lernhilfe.html
+++ b/Latein_Lernhilfe.html
@@ -21,6 +21,26 @@ Latein lernen mit Jonathan M.
   von Jonathan aus Heidelberg
 </h3>
 
+<div style="font-family:'Candara',Times,serif; font-size: 100%">
+<a style="color: blue" href="http://jonathanmerdes.github.io/Deutsch_Lernhilfe.html">Meine Deutsch Lernhilfe</a>
+</div>
+
+<div style="font-family:'Candara',Times,serif; font-size: 100%">
+<a style="color: blue" href="http://jonathanmerdes.github.io/Englisch_Lernhilfe.html">Meine Englisch Lernhilfe</a>
+</div>
+
+<div style="font-family:'Candara',Times,serif; font-size: 100%">
+<a style="color: blue" href="http://jonathanmerdes.github.io/NWT_Lernhilfe.html">Meine NWT Lernhilfe</a>
+</div>
+
+<div style="font-family:'Candara',Times,serif; font-size: 100%">
+<a style="color: blue" href="http://jonathanmerdes.github.io/Mathe_Lernhilfe.html">Meine Mathe Lernhilfe</a>
+</div>
+<br>
+<br>
+<div style="font-family:'Candara',Times,serif; font-size: 100%">
+<a style="color: red" href="https://www.youtube.com/user/jonremfcb">Mein Youtube-Kanal</a>
+</div>
 
 
 
