--- a/NWT_Lernhilfe.html
+++ b/NWT_Lernhilfe.html
@@ -1,8 +1,13 @@
 <html>
 
+<head>
   <title>
   NWT lernen mit Jonathan M.
   </title>
+
+   <link rel="stylesheet" type="text/css" href="Lernhilfe.css">
+
+</head>
 
 <body>
 
@@ -48,6 +53,8 @@ Der Sextant, eines der &auml;ltesten<br/>
 
 </span>
 
+
+
 <div style="font-family:'Candara',Times,serif; font-size: 100%">
 <a style="color: blue" href="http://jonathanmerdes.github.io/Deutsch_Lernhilfe.html">Meine Deutsch Lernhilfe</a>
 </div>
@@ -63,8 +70,10 @@ Der Sextant, eines der &auml;ltesten<br/>
 <div style="font-family:'Candara',Times,serif; font-size: 100%">
 <a style="color: blue" href="http://jonathanmerdes.github.io/Mathe_Lernhilfe.html">Meine Mathe Lernhilfe</a>
 </div>
+
 <br>
 <br>
+
 <div style="font-family:'Candara',Times,serif; font-size: 100%">
 <a style="color: red" href="https://www.youtube.com/user/jonremfcb">Mein Youtube-Kanal</a>
 </div>
