--- a/NWT_Lernhilfe.html
+++ b/NWT_Lernhilfe.html
@@ -55,19 +55,19 @@ Der Sextant, eines der &auml;ltesten<br/>
 
 
 
-<div style="font-family:'Candara',Times,serif; font-size: 100%">
+<div class= "Lernhilfelink">
 <a style="color: blue" href="http://jonathanmerdes.github.io/Deutsch_Lernhilfe.html">Meine Deutsch Lernhilfe</a>
 </div>
 
-<div style="font-family:'Candara',Times,serif; font-size: 100%">
+<div class= "Lernhilfelink">
 <a style="color: blue" href="http://jonathanmerdes.github.io/Englisch_Lernhilfe.html">Meine Englisch Lernhilfe</a>
 </div>
 
-<div style="font-family:'Candara',Times,serif; font-size: 100%">
+<div class= "Lernhilfelink">
 <a style="color: blue" href="http://jonathanmerdes.github.io/Latein_Lernhilfe.html">Meine Latein Lernhilfe</a>
 </div>
 
-<div style="font-family:'Candara',Times,serif; font-size: 100%">
+<div class= "Lernhilfelink">
 <a style="color: blue" href="http://jonathanmerdes.github.io/Mathe_Lernhilfe.html">Meine Mathe Lernhilfe</a>
 </div>
 
