--- a/NWT_Lernhilfe.html
+++ b/NWT_Lernhilfe.html
@@ -56,19 +56,19 @@ Der Sextant, eines der &auml;ltesten<br/>
 
 
 <div class= "Lernhilfelink">
-<a style="color: blue" href="http://jonathanmerdes.github.io/Deutsch_Lernhilfe.html">Meine Deutsch Lernhilfe</a>
+<a  href="http://jonathanmerdes.github.io/Deutsch_Lernhilfe.html">Meine Deutsch Lernhilfe</a>
 </div>
 
 <div class= "Lernhilfelink">
-<a style="color: blue" href="http://jonathanmerdes.github.io/Englisch_Lernhilfe.html">Meine Englisch Lernhilfe</a>
+<a  href="http://jonathanmerdes.github.io/Englisch_Lernhilfe.html">Meine Englisch Lernhilfe</a>
 </div>
 
 <div class= "Lernhilfelink">
-<a style="color: blue" href="http://jonathanmerdes.github.io/Latein_Lernhilfe.html">Meine Latein Lernhilfe</a>
+<a  href="http://jonathanmerdes.github.io/Latein_Lernhilfe.html">Meine Latein Lernhilfe</a>
 </div>
 
 <div class= "Lernhilfelink">
-<a style="color: blue" href="http://jonathanmerdes.github.io/Mathe_Lernhilfe.html">Meine Mathe Lernhilfe</a>
+<a  href="http://jonathanmerdes.github.io/Mathe_Lernhilfe.html">Meine Mathe Lernhilfe</a>
 </div>
 
 <br>
