--- a/Mathe_Lernhilfe.html
+++ b/Mathe_Lernhilfe.html
@@ -23,26 +23,26 @@ von Jonathan aus Heidelberg
 
 
 <div class= "Lernhilfelink">
-<a style="color: blue" href="http://jonathanmerdes.github.io/Deutsch_Lernhilfe.html">Meine Deutsch Lernhilfe</a>
+<a  href="http://jonathanmerdes.github.io/Deutsch_Lernhilfe.html">Meine Deutsch Lernhilfe</a>
 </div>
 
 <div class= "Lernhilfelink">
-<a style="color: blue" href="http://jonathanmerdes.github.io/Englisch_Lernhilfe.html">Meine Englisch Lernhilfe</a>
+<a  href="http://jonathanmerdes.github.io/Englisch_Lernhilfe.html">Meine Englisch Lernhilfe</a>
 </div>
 
 <div class= "Lernhilfelink">
-<a style="color: blue" href="http://jonathanmerdes.github.io/Latein_Lernhilfe.html">Meine Latein Lernhilfe</a>
+<a  href="http://jonathanmerdes.github.io/Latein_Lernhilfe.html">Meine Latein Lernhilfe</a>
 </div>
 
 <div class= "Lernhilfelink">
-<a style="color: blue" href="http://jonathanmerdes.github.io/NWT_Lernhilfe.html">Meine NWT Lernhilfe</a>
+<a  href="http://jonathanmerdes.github.io/NWT_Lernhilfe.html">Meine NWT Lernhilfe</a>
 </div>
 
 <br>
 <br>
 
 <div style="font-family:'Candara',Times,serif; font-size: 100%">
-<a style="color: red" href="https://www.youtube.com/user/jonremfcb">Mein Youtube-Kanal</a>
+<a  href="https://www.youtube.com/user/jonremfcb">Mein Youtube-Kanal</a>
 </div>
 
 <br>
