--- a/Deutsch_Lernhilfe.html
+++ b/Deutsch_Lernhilfe.html
@@ -27,19 +27,19 @@ und will euch auf dieser Seite einiges der deutsche Sprache erklären.
 </p>
 
 <div class= "Lernhilfelink">
-<a style="color: blue" href="http://jonathanmerdes.github.io/NWT_Lernhilfe.html">Meine NWT Lernhilfe</a>
+<a  href="http://jonathanmerdes.github.io/NWT_Lernhilfe.html">Meine NWT Lernhilfe</a>
 </div>
 
 <div class= "Lernhilfelink">
-<a style="color: blue" href="http://jonathanmerdes.github.io/Englisch_Lernhilfe.html">Meine Englisch Lernhilfe</a>
+<a  href="http://jonathanmerdes.github.io/Englisch_Lernhilfe.html">Meine Englisch Lernhilfe</a>
 </div>
 
 <div class= "Lernhilfelink">
-<a style="color: blue" href="http://jonathanmerdes.github.io/Latein_Lernhilfe.html">Meine Latein Lernhilfe</a>
+<a  href="http://jonathanmerdes.github.io/Latein_Lernhilfe.html">Meine Latein Lernhilfe</a>
 </div>
 
 <div class= "Lernhilfelink">
-<a style="color: blue" href="http://jonathanmerdes.github.io/Mathe_Lernhilfe.html">Meine Mathe Lernhilfe</a>
+<a  href="http://jonathanmerdes.github.io/Mathe_Lernhilfe.html">Meine Mathe Lernhilfe</a>
 </div>
 <br>
 <br>
