--- a/Englisch_Lernhilfe.html
+++ b/Englisch_Lernhilfe.html
@@ -27,19 +27,19 @@
 </figure>
 
 <div class= "Lernhilfelink">
-<a style="color: blue" href="http://jonathanmerdes.github.io/Deutsch_Lernhilfe.html">Meine Deutsch Lernhilfe</a>
+<a  href="http://jonathanmerdes.github.io/Deutsch_Lernhilfe.html">Meine Deutsch Lernhilfe</a>
 </div>
 
 <div class= "Lernhilfelink">
-<a style="color: blue" href="http://jonathanmerdes.github.io/NWT_Lernhilfe.html">Meine NWT Lernhilfe</a>
+<a  href="http://jonathanmerdes.github.io/NWT_Lernhilfe.html">Meine NWT Lernhilfe</a>
 </div>
 
 <div class= "Lernhilfelink">
-<a style="color: blue" href="http://jonathanmerdes.github.io/Latein_Lernhilfe.html">Meine Latein Lernhilfe</a>
+<a  href="http://jonathanmerdes.github.io/Latein_Lernhilfe.html">Meine Latein Lernhilfe</a>
 </div>
 
 <div class= "Lernhilfelink">
-<a style="color: blue" href="http://jonathanmerdes.github.io/Mathe_Lernhilfe.html">Meine Mathe Lernhilfe</a>
+<a  href="http://jonathanmerdes.github.io/Mathe_Lernhilfe.html">Meine Mathe Lernhilfe</a>
 </div>
 <br>
 <br>
