--- a/NWT_Lernhilfe.html
+++ b/NWT_Lernhilfe.html
@@ -34,10 +34,15 @@
 
   <p><span style="font-family:'Comic Sans MS',Times,serif;color:dark grey; font-size: 100%">
   Hallo, ich bin Jonathan M. vom <a style="color: blue" href="http://www.kfg-heidelberg.de">Kurf&uuml;rst-Friedrich-Gymnasium</a>  aus Heidelberg, bin in der 9. Klasse,<br/>
-  belege den Profilkurs NaturWissenschaften & Technik und m&ouml;chte euch gerne auf dieser Seite einiges erkl&auml;ren, <br/>
-  was man f&uuml;r die Themeneinheit "Orientierung im Gel&auml;nde" in der achten Klasse braucht.<br/>
+  belege den Profilkurs NaturWissenschaften & Technik und m&ouml;chte euch auf dieser Seite einiges erkl&auml;ren, <br/>
+  was man f&uuml;r dieses Fach in der achten Klasse braucht.<br/>
 
 
+<h4>
+<p style= "text-align: center; font-family:'Candara';color:gray">
+Orientierung
+
+</h4>
 
   <p>
 
