--- a/Latein_Lernhilfe.html
+++ b/Latein_Lernhilfe.html
@@ -21,6 +21,12 @@ Latein lernen mit Jonathan M.
   von Jonathan aus Heidelberg
 </h3>
 
+<figure>
+  <img class="imgzentirert" width= "400" src="http://www.gymnasium-essen-ueberruhr.de/images/1_BILDER_NEU/Faecher/Latein.jpg"></img>
+  <figcaption>F&uuml;r Manche die Pure Verwirrung: Latein</figcaption>
+</figure>
+
+
 <div class= "Lernhilfelink">
 <a  href="http://jonathanmerdes.github.io/Deutsch_Lernhilfe.html">Meine Deutsch Lernhilfe</a>
 </div>
