--- a/NWT_Lernhilfe.html
+++ b/NWT_Lernhilfe.html
@@ -37,12 +37,15 @@
   belege den Profilkurs NaturWissenschaften & Technik und m&ouml;chte euch auf dieser Seite einiges erkl&auml;ren, <br/>
   was man f&uuml;r dieses Fach in der achten Klasse braucht.<br/>
 
+<br/>
+<br/>
 
-<h4>
+<h1>
 <p style= "text-align: center; font-family:'Candara';color:gray">
 Orientierung
+</h1>
 
-</h4>
+Der erste Teil der achten Klasse besteht in NWT aus der Themeneinheit Orientierung.
 
   <p>
 
