--- a/Deutsch_Lernhilfe.html
+++ b/Deutsch_Lernhilfe.html
@@ -43,9 +43,14 @@ und will euch auf dieser Seite einiges der deutsche Sprache erklären.
 </div>
 <br>
 <br>
-<div class= "Lernhilfelink">
+<pac class= "Lernhilfelink">
+<a  href="http://jonathanmerdes.github.io/Impressum.html">Impressum</a>
+</pac>
+
+
+<pac style="font-family:'Candara',Times,serif; font-size: 100%">
 <a style="color: red" href="https://www.youtube.com/user/jonremfcb">Mein Youtube-Kanal</a>
-</div>
+</pac>
 
 <br>
 <br>
