--- a/Impressum.html
+++ b/Impressum.html
@@ -25,6 +25,9 @@
 <body>
 Die Lernhilfen wurden erstellt von Jonathan M. aus Heidelberg u.a. im Rahmen des
 <a href="https://zen.coderdojo.com/dojo/722" style="color: blue">Coderdojo Heidelberg</a>.
+<br>
+Erstellt mit <a href="https://atom.io/" style="color: blue">Atom</a>.
+Hochgeladen mit Hilfe von <a href="https://github.com/" style="color: blue">GitHub</a>.
 
 <br>
 <br>
@@ -48,7 +51,7 @@ Die Lernhilfen wurden erstellt von Jonathan M. aus Heidelberg u.a. im Rahmen des
 <a  href="http://jonathanmerdes.github.io/Latein_Lernhilfe.html">Meine Latein Lernhilfe:</a>
 </div>
 
-http://www.gymnasium-essen-ueberruhr.de/index.php/alle-faecher/fach-latein<br>
+http://www.gymnasium-essen-ueberruhr.de/index.php/alle-faecher/fach-latein   <br>
 <br>
 
 <div class= "Lernhilfelink">
@@ -63,5 +66,9 @@ http://www.gymnasium-essen-ueberruhr.de/index.php/alle-faecher/fach-latein<br>
 <br>
 
 Kontakt: jon.rem.fcb&#64;outlook.com
+
+<pac style="font-family:'Candara',Times,serif; font-size: 100%">
+<a style="color: red" href="https://www.youtube.com/user/jonremfcb">Mein Youtube-Kanal</a>
+</pac>
 
   </html>
