--- a/Mathe_Lernhilfe.html
+++ b/Mathe_Lernhilfe.html
@@ -41,9 +41,14 @@ von Jonathan aus Heidelberg
 <br>
 <br>
 
-<div style="font-family:'Candara',Times,serif; font-size: 100%">
-<a  href="https://www.youtube.com/user/jonremfcb">Mein Youtube-Kanal</a>
-</div>
+<pac class= "Lernhilfelink">
+<a  href="http://jonathanmerdes.github.io/Impressum.html">Impressum</a>
+</pac>
+
+
+<pac style="font-family:'Candara',Times,serif; font-size: 100%">
+<a style="color: red" href="https://www.youtube.com/user/jonremfcb">Mein Youtube-Kanal</a>
+</pac>
 
 <br>
 <br>
