--- a/Latein_Lernhilfe.html
+++ b/Latein_Lernhilfe.html
@@ -44,9 +44,14 @@ Latein lernen mit Jonathan M.
 </div>
 <br>
 <br>
-<div class= "Lernhilfelink">
+<pac class= "Lernhilfelink">
+<a  href="http://jonathanmerdes.github.io/Impressum.html">Impressum</a>
+</pac>
+
+
+<pac style="font-family:'Candara',Times,serif; font-size: 100%">
 <a style="color: red" href="https://www.youtube.com/user/jonremfcb">Mein Youtube-Kanal</a>
-</div>
+</pac>
 
 <br>
 <br>
