--- a/NWT_Lernhilfe.html
+++ b/NWT_Lernhilfe.html
@@ -82,9 +82,14 @@ Der Sextant, eines der &auml;ltesten<br/>
 <br>
 <br>
 
-<div style="font-family:'Candara',Times,serif; font-size: 100%">
+<pac class= "Lernhilfelink">
+<a  href="http://jonathanmerdes.github.io/Impressum.html">Impressum</a>
+</pac>
+
+
+<pac style="font-family:'Candara',Times,serif; font-size: 100%">
 <a style="color: red" href="https://www.youtube.com/user/jonremfcb">Mein Youtube-Kanal</a>
-</div>
+</pac>
 
 <br>
 <br>
