--- a/Mathe_Lernhilfe.html
+++ b/Mathe_Lernhilfe.html
@@ -38,6 +38,10 @@ von Jonathan aus Heidelberg
 <a  href="http://jonathanmerdes.github.io/NWT_Lernhilfe.html">Meine NWT Lernhilfe</a>
 </div>
 
+<div class= "Lernhilfelink">
+<a  href="http://jonathanmerdes.github.io/Homepage.html">Meine Homepage</a>
+</div>
+
 <br>
 <br>
 
