--- a/Deutsch_Lernhilfe.html
+++ b/Deutsch_Lernhilfe.html
@@ -41,8 +41,14 @@ und will euch auf dieser Seite einiges der deutsche Sprache erklären.
 <div class= "Lernhilfelink">
 <a  href="http://jonathanmerdes.github.io/Mathe_Lernhilfe.html">Meine Mathe Lernhilfe</a>
 </div>
+
+<div class= "Lernhilfelink">
+<a  href="http://jonathanmerdes.github.io/Homepage.html">Meine Homepage</a>
+</div>
+
 <br>
 <br>
+
 <pac class= "Lernhilfelink">
 <a  href="http://jonathanmerdes.github.io/Impressum.html">Impressum</a>
 </pac>
