--- a/NWT_Lernhilfe.html
+++ b/NWT_Lernhilfe.html
@@ -79,6 +79,10 @@ Der Sextant, eines der &auml;ltesten<br/>
 <a  href="http://jonathanmerdes.github.io/Mathe_Lernhilfe.html">Meine Mathe Lernhilfe</a>
 </div>
 
+<div class= "Lernhilfelink">
+<a  href="http://jonathanmerdes.github.io/Homepage.html">Meine Homepage</a>
+</div>
+
 <br>
 <br>
 
