--- a/Homepage.html
+++ b/Homepage.html
@@ -26,11 +26,18 @@ Homepage
   &Uuml;ber mich
     </h3>
 
+    <figure>
+      <img class="imgzentirert" width= "500" src="https://upload.wikimedia.org/wikipedia/commons/7/7c/Neckarstaden_HD_KFG.JPG"></img>
+      <figcaption>Meine Schule, das <a href="http://www.kfg-heidelberg.de" style="color: blue">KFG</a> in Heidelberg (von <a href="https://commons.wikimedia.org/wiki/File:Neckarstaden_HD_KFG.JPG" style="color: blue">Wikipedia</a>, User 4028mdk09)</figcaption>
+    </figure>
+
     <p style="text-align: center;"><span style="font-family:'Comic Sans MS',Times,serif;color:dark grey; font-size: 100%">
     Ich bin Jonathan M. vom
      <a style="color: blue" href="http://www.kfg-heidelberg.de">Kurf&uuml;rst-Friedrich-Gymnasium</a>
     aus Heidelberg, bin in der 9. Klasse, <br>
     und erstelle und ver&ouml;ffentliche Lernhilfe-seiten f&uuml;r die Stufen 5-8 des Gymnasiums.
+    <br>
+    Ausserdem empfehle ich euch andere Seiten oder auch Kanäle auf Youtube, die richtig reinhauen.
 
 
     <div class= "Lernhilfelink">
