--- a/Mathe_Lernhilfe.html
+++ b/Mathe_Lernhilfe.html
@@ -22,6 +22,16 @@ von Jonathan aus Heidelberg
 </h3>
 
 
+
+Ausser dieser und vieler weiterer Lernseiten gibt es auch noch den YouTube-Kanal
+<a style="color:darkblue" href="https://www.youtube.com/user/TheSimpleMaths">The Simple Maths</a>; von der Reihe gibt es auch noch
+<a style="color:darkblue" href="https://www.youtube.com/user/TheSimplePhysics">The Simple Physics</a>, <br>
+<a style="color:darkblue" href="https://www.youtube.com/user/TheSimpleBiology">The Simple Biology</a> und
+<a style="color:darkblue" href="https://www.youtube.com/user/TheSimpleChemics">The Simple Chemics</a>.
+
+<br>
+<br>
+
 <div class= "Lernhilfelink">
 <a  href="http://jonathanmerdes.github.io/Deutsch_Lernhilfe.html">Meine Deutsch Lernhilfe</a>
 </div>
@@ -38,6 +48,8 @@ von Jonathan aus Heidelberg
 <a  href="http://jonathanmerdes.github.io/NWT_Lernhilfe.html">Meine NWT Lernhilfe</a>
 </div>
 
+<br>
+
 <div class= "Lernhilfelink">
 <a  href="http://jonathanmerdes.github.io/Homepage.html">Meine Homepage</a>
 </div>
@@ -51,7 +63,7 @@ von Jonathan aus Heidelberg
 
 
 <pac style="font-family:'Candara',Times,serif; font-size: 100%">
-<a style="color: red" href="https://www.youtube.com/user/jonremfcb">Mein Youtube-Kanal</a>
+<a style="color: red" href="https://www.youtube.com/user/jonremfcb">Mein YouTube-Kanal</a>
 </pac>
 
 <br>
