--- a/NWT_Lernhilfe.html
+++ b/NWT_Lernhilfe.html
@@ -27,15 +27,12 @@
 </h3>
   <p>
 
-    <figure>
-      <img class="imgzentirert" width= "500" src="https://upload.wikimedia.org/wikipedia/commons/7/7c/Neckarstaden_HD_KFG.JPG"></img>
-      <figcaption>Meine Schule, das <a href="http://www.kfg-heidelberg.de" style="color: blue">KFG</a> in Heidelberg (von <a href="https://commons.wikimedia.org/wiki/File:Neckarstaden_HD_KFG.JPG" style="color: blue">Wikipedia</a>, User 4028mdk09)</figcaption>
-    </figure>
+  <br/>
+  <br/>  
 
   <p><span style="font-family:'Comic Sans MS',Times,serif;color:dark grey; font-size: 100%">
-  Hallo, ich bin Jonathan M. vom <a style="color: blue" href="http://www.kfg-heidelberg.de">Kurf&uuml;rst-Friedrich-Gymnasium</a>  aus Heidelberg, bin in der 9. Klasse,<br/>
-  belege den Profilkurs NaturWissenschaften & Technik und m&ouml;chte euch auf dieser Seite einiges erkl&auml;ren, <br/>
-  was man f&uuml;r dieses Fach in der achten Klasse braucht.<br/>
+  Ich m&ouml;chte euch auf dieser Seite einiges erkl&auml;ren, <br/>
+  was man f&uuml;r NWT Fach in der achten Klasse braucht.<br/>
 
 <br/>
 <br/>
@@ -78,6 +75,8 @@ Der Sextant, eines der &auml;ltesten<br/>
 <div class= "Lernhilfelink">
 <a  href="http://jonathanmerdes.github.io/Mathe_Lernhilfe.html">Meine Mathe Lernhilfe</a>
 </div>
+
+<br>
 
 <div class= "Lernhilfelink">
 <a  href="http://jonathanmerdes.github.io/Homepage.html">Meine Homepage</a>
